# hairpin2

./: .buildinfo  .coveragerc  .gitignore  .gitlab-ci.yml  CHANGES.md  Dockerfile  LICENSE  README.md  Singularity-deps-only.def  Singularity.def  TODO.md  dev.html  docker-run-unit-tests.sh  genindex.html  guide.html  hairpin2.const.html  hairpin2.html  hairpin2.infrastructure.cli.html  hairpin2.infrastructure.configure_funcs.html  hairpin2.infrastructure.html  hairpin2.infrastructure.process.html  hairpin2.infrastructure.process_engines.html  hairpin2.infrastructure.process_params.html  hairpin2.infrastructure.rascheduler.html  hairpin2.infrastructure.structures.html  hairpin2.main.html  hairpin2.process_wrappers.ADF.html  hairpin2.process_wrappers.ALF.html  hairpin2.process_wrappers.DVF.html  hairpin2.process_wrappers.LQF.html  hairpin2.process_wrappers.html  hairpin2.process_wrappers.mark_overlap.html  hairpin2.process_wrappers.mark_support.html  hairpin2.process_wrappers.shared.html  hairpin2.sci_funcs.html  index.html  internal_doc.md  main.py  modules.html  objects.inv  (+6 more)
.doctrees/: dev.doctree  environment.pickle  guide.doctree  hairpin2.const.doctree  hairpin2.doctree  hairpin2.infrastructure.cli.doctree  hairpin2.infrastructure.configure_funcs.doctree  hairpin2.infrastructure.doctree  hairpin2.infrastructure.process.doctree  hairpin2.infrastructure.process_engines.doctree  hairpin2.infrastructure.process_params.doctree  hairpin2.infrastructure.rascheduler.doctree  hairpin2.infrastructure.structures.doctree  hairpin2.main.doctree  hairpin2.process_wrappers.ADF.doctree  hairpin2.process_wrappers.ALF.doctree  hairpin2.process_wrappers.DVF.doctree  hairpin2.process_wrappers.LQF.doctree  hairpin2.process_wrappers.doctree  hairpin2.process_wrappers.mark_overlap.doctree  hairpin2.process_wrappers.mark_support.doctree  hairpin2.process_wrappers.shared.doctree  hairpin2.sci_funcs.doctree  index.doctree  modules.doctree  quickstart.doctree
.github/workflows/: codeql.yml  github-pages.yml  pip-audit.yml  secrets.yml  semgrep.yml
_modules/: index.html
_modules/hairpin2/: const.html  main.html  sci_funcs.html
_sources/: guide.md.txt  hairpin2.main.rst.txt  hairpin2.process_wrappers.ALF.rst.txt  hairpin2.process_wrappers.mark_support.rst.txt  modules.rst.txt  quickstart.md.txt
docs/source/: changes.md  conf.py  dev.md  guide.md  hairpin2.VERSION.rst  hairpin2.cli.rst  hairpin2.const.rst  hairpin2.rst  (+20 more)
example-configs/: 3a2-defaults.json  3a3-defaults.json  3a4-defaults.json  3a5-default-exec.toml  3a5-default-params.toml  3a5-defaults.json  defaults.json  exec-byrne.toml  exec-campbell.toml
hairpin/: constants.py  main.py  ref2seq.py  utilities.py
hairpin2/: VERSION.py  __init__.py  abstractfilters.py  abstractflaggers.py  cli.py  const.py  constants.py  filters.py  helpers.py  main.py  readqc.py  ref2seq.py  sci_funcs.py  structures.py
hairpin2.egg-info/: PKG-INFO
test/: conftest.py  helpers.py  single_var_silico.vcf  test_ADF.py  test_ADFilter.py  test_ALF.py  test_ALFilter.py  test_AlignmentScoreTest.py  test_DVF.py  test_DVFilter.py  test_dup_preprocessor.py  test_flag_read_alt.py  test_flag_read_alt_validate.py  test_flag_read_broad.py  test_flag_read_broad_valiate.py  test_is_variant_AD_validate.py  test_is_variant_AL_validate.py  test_is_variant_HP_validate.py  test_ref2querypos.py  test_ref2querypos_validate.py  test_ref_end_via_cigar.py  test_ref_end_via_cigar_validate.py  test_test_variant_AL_validate.py  test_test_variant_HP_validate.py  test_test_variant_validate.py  test_validate_read.py  test_validate_read_dev.py  test_validate_read_validate.py
(+57 files in other folders)
