[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hairpin2"]

[project]
name = "hairpin2"
version = "2.0.0"
description = "CLI for running read-aware artefactual variant flagging algorithms over VCFs"
authors = [
  {name = "Alex Byrne"}
]
license = "MIT"
readme = "README.md"
dependencies = [
  "pysam>=0.22, ==0.*",
  "pydantic>=2.11.7, ==2.*"
]
requires-python = ">= 3.12"

[project.optional-dependencies]
dev = [
  "pytest==8.*",
  "pytest-cov==6.*"
]

[project.scripts]
hairpin2 = "hairpin2.main:hairpin2"

